# hugin-munin-error-labelling

./: README.md  pyproject.toml
data/behandlet/: all_lines.csv  labelling_sheet.csv  mistaken_lines.csv
data/test_set/: 02f02f39-fd11-4542-92a3-9e16d9fc3227.csv  0ad7f5ba-d7ee-4d25-89ad-16db2daa3f86.csv  0aeebaca-b2e6-43ab-9b5c-7d90ddfa5522.csv  102ca72a-6c62-4f26-ad06-51c1a230febb.csv  124d818b-d57d-4f9f-b4d5-7a1c1238b243.csv  1726ba3f-0949-4f6a-9840-de15bc953d3d.csv  1dc29c02-1ad1-4777-9ff0-0cbf1b06385d.csv  2080bd5f-2c9c-4889-bdde-0a093d46f3c6.csv  20d10cf5-b6ee-4101-a25a-3e747e8ddc3c.csv  21b07734-c7ee-41e6-a5a4-64b5eb1407c9.csv  27d00a6c-ea62-4806-a1b4-35f8be939cbf.csv  2f06b2fd-607c-44a1-aa0b-04c902ff7b36.csv  306deec5-7fbd-42c9-9c15-28a16b426fba.csv  3277a5f9-e1b9-47a9-a1ba-e238e37fa6a6.csv  3605481a-f672-465d-96b4-8b5adbf9608a.csv  397ffba8-54cf-4501-8a82-6d85ecfff480.csv  3f3d2719-f0b1-4572-87cd-fb2fac0446f5.csv  42647a08-27a5-4b2e-aa21-cffbf1ff6be2.csv  45c6ff3a-ce7a-4e0f-98d8-2378fb937f55.csv  4805e117-3b29-4cb7-a537-4d17476e801d.csv  4b860ed2-d51a-41bd-b73f-698a51730d5a.csv  4cc3ffcc-1ab1-4999-97b1-ed4f1a68bd2c.csv  507416b3-b936-405e-99d1-395053419dc6.csv  51cea8b8-41d2-4201-a6ea-79417aa26dae.csv  522a8e44-c23a-47b8-85f3-7074b081b65b.csv  52b3c48f-050a-41b8-8391-bb200808fb6c.csv  531ea72f-d6ac-4761-9876-d13480a77d51.csv  532a1580-614e-4d15-a00b-0b2e164f33a3.csv  5498a837-8db5-4299-9950-e22545bc1a0a.csv  55f9092c-a614-4f0f-a7d4-9693b0ac0c1a.csv  57b55404-7548-451b-ad9b-132a41c38948.csv  (+50 more)
notebooks/: diff-viewer.ipynb
scripts/: summarise_csv.py
